--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -16,29 +16,29 @@
 
     <div class="col-h-4a12">
       <nav class="menu" id="top_menu">
-        <ul>
+        <ul class="header-flex">
           <li class="menu-hamb">
             <a id="hamburger_menu" href="#">
-              <%=fa_icon "bars"%> <span>Menú</span>
+              <%=fa_icon "bars"%> <span style="display: none;">Menú</span>
             </a>
           </li>
           <li>
-            <%= nav_menu_link_to "Inicio", "home", root_path, [root_path], title: "Inicio" %>
+            <%= nav_menu_link_to "Inicio", root_path, [root_path], title: "Inicio" %>
           </li>
           <li>
-            <%= nav_menu_link_to "Datos personales", "user", edit_user_registration_path, [edit_user_registration_path], title: "Datos personales" %>
+            <%= nav_menu_link_to "Datos personales", edit_user_registration_path, [edit_user_registration_path], title: "Datos personales" %>
           </li>
           <li>
-            <%= nav_menu_link_to "Financiación", "euro", funding_path, [funding_path], title: "Financiación"  %>
+            <%= nav_menu_link_to "Crowdfunding", funding_path, [funding_path], title: "Crowdfunding"  %>
           </li>
           <li>
-            <%= nav_menu_link_to "Iniciativas ciudadanas", "lightbulb-o", proposals_path, [proposals_path], title: "Iniciativas ciudadanas " %>
+            <%= nav_menu_link_to "Iniciativas", proposals_path, [proposals_path], title: "Iniciativas" %>
           </li>
           <li>
-            <%= nav_menu_link_to "IMPULSA", "rocket", impulsa_path, [impulsa_path], title: "IMPULSA" %>
+            <%= nav_menu_link_to "Tienda", impulsa_path, [impulsa_path], title: "Tienda" %>
           </li>
           <li>
-            <%= nav_menu_link_to "Salir", "sign-out", destroy_user_session_path, [destroy_user_session_path], method: :delete, title: "Cerrar sesión" %>
+            <%= nav_menu_link_to "Salir", destroy_user_session_path, [destroy_user_session_path], method: :delete, title: "Cerrar sesión", class: "salir-icono" %>
           </li>
         </ul>
       </nav><%#.menu%>
