--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
           <p><%= t('podemos.registration.p1_html') %></p>
       <% end %>
       <%= errors_in_form resource %>
+      <h2 class="unirme">Unirme a Más Madrid</h2>
       <%= render partial: "form", locals: {action: "new"} %>
     </div>
   </div>
