--- a/app/views/user_verification_mailer/on_rejected.es.html.erb
+++ b/app/views/user_verification_mailer/on_rejected.es.html.erb
@@ -10,12 +10,12 @@
   <li>Que en el pasaporte no aparezca el n&uacute;mero de DNI que debemos verificar (sucede con pasaportes expedidos en los consulados y afecta, principalmente, a espa&ntilde;oles residentes en el exterior). En estos casos, junto al pasaporte vigente habr&aacute; que adjuntar, en la segunda foto del formulario, el documento que acredite el DNI del titular del pasaporte, como por ejemplo el carnet de conducir, o incluso un DNI caducado.</li>
   <li>Que se hayan subido documentos de identidad de otra persona (es importante que verifiques que la foto que subes es la de tu documento de identidad y no la del de otra persona).</li>
 </ul>
-<p>Por favor, ante cualquier duda, contacta directamente con lopd@podemos.info para tratar la incidencia con el Equipo de Protecci&oacute;n de Datos.</p>
+<p>Por favor, ante cualquier duda, contacta directamente con protecciondedatos@masmadrid.org para tratar la incidencia con el Equipo de Protecci&oacute;n de Datos.</p>
 
-<p>Para m&aacute;s informaci&oacute;n sobre el proceso, puedes consultar esta p&aacute;gina web: <a href="https://podemos.info/identificate/">https://podemos.info/identificate/</a>.</p>
+<p>Para m&aacute;s informaci&oacute;n sobre el proceso, puedes consultar esta p&aacute;gina web: <a href="https://masmadrid.org">https://masmadrid.org</a>.</p>
 
 <p>Muchas gracias por participar en el proceso de verificaci&oacute;n.</p>
 
 <p>Un cordial saludo,</p>
 
-<p>Podemos</p>
+<p>Más Madrid</p>
