Cambios de correos y textos

--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -10,7 +10,7 @@
         Tu usuario ya está verificado por lo que los Datos personales no pueden ser modificados.
         </p>
         <p>
-        Si necesitas modificarlos envía un email a  <a href='mailto:lopd@podemos.info'>lopd@podemos.info</a>
+        Si necesitas modificarlos envía un email a  <a href='mailto:protecciondedatos@masmadrid.org'>protecciondedatos@masmadrid.org</a>
         adjuntando el nuevo documento de identidad escaneado  indicando los motivos
         de la nueva modificación de dichos datos.
         </p>
@@ -258,9 +258,8 @@
           <%= f.label :terms_of_service %>
           <div class="input-box">
             <%= f.check_box :terms_of_service, class: 'checkbox' %>
-            <p class="text-xl">He leído y acepto las condiciones generales de inscripción en Podemos, uso del portal de participación, empleo de cookies y política de privacidad,
-              así como los Estatutos, el Código Ético y los Documentos de Podemos que puedo consultar y descargar en los siguientes enlaces
-              <a href='https://files.podemos.info/tbsEDpJwi7.pdf' target='_blank'>Condiciones generales de inscripción, uso del portal y política de privacidad de Podemos</a>  y <a href='https://podemos.info/documentos/' target='_blank'>https://podemos.info/documentos/.</a></p>
+            <p class="text-xl">He leído y acepto las condiciones generales de inscripción en Más Madrid, uso del portal de participación, empleo de cookies y política de privacidad,
+              así como los Estatutos y el Código Ético.
           </div>
         </div>
 
