Cambiado la dirección de email por nombre y apellidos en el envio de correos

--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<p><%= t('podemos.devise.mailer.hello') %> <%= @resource.email %>!</p>
+<p><%= t('podemos.devise.mailer.hello') %> <%= @resource.first_name %> <%= @resource.last_name %>!</p>
 
 <p><%= t('podemos.devise.mailer.lock.p1') %></p>
 
