--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>¡<%= t('podemos.devise.mailer.welcome') %> <%= @email %>!</p>
+<p>¡<%= t('podemos.devise.mailer.welcome') %> <%= @resource.first_name %> <%= @resource.last_name %>!</p>
 
 <p><%= t('podemos.devise.mailer.confirm.p1') %></p>
 
