--- a/app/views/devise/mailer/confirmation_instructions.text.erb
+++ b/app/views/devise/mailer/confirmation_instructions.text.erb
@@ -1,4 +1,4 @@
-¡<%= t('podemos.devise.mailer.welcome') %> <%= @email %>!
+¡<%= t('podemos.devise.mailer.welcome') %> <%= @resource.first_name %> <%= @resource.last_name %>!
 
 <%= t('podemos.devise.mailer.confirm.p1') %>
 
