--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -1,4 +1,4 @@
-<%= t('podemos.devise.mailer.hello') %>  <%= @resource.email %>
+<%= t('podemos.devise.mailer.hello') %> <%= @resource.first_name %> <%= @resource.last_name %>
 
 <%= t('podemos.devise.mailer.password.p2') %>
 
