--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -325,6 +325,7 @@ home
 .login-form-contenedor {
   width: 100%;
   padding: 20px; 
+  margin-bottom: 20px;
 }
 
 .login-texto {
@@ -378,8 +379,8 @@ home
   width: 480px;
   max-width: 480px;
   padding: 15px 15px 0 15px;
-  margin: 35px 0 0 0;
-
+  margin: 35px auto 0 auto;
+  right: 4px;
 }
 
 .login-form h4 {
@@ -413,10 +414,35 @@ home
   margin: 5px 0;
 }
 
+.rel-bot-right {
+    &::before {
+      position: absolute;
+      content: '';
+      bottom: -15px;
+      height: 15px;
+      width: 100%;
+      left: 8px;
+      transform: skewX(45deg);
+      background-color: $marron-unete;
+    }
+  
+    &::after {
+      position: absolute;
+      content: '';  
+      right: -15px;
+      height: 100%;
+      width: 15px;
+      bottom: -8px;
+      transform: skewY(45deg);
+      background-color: $marron-unete;
+    }
+
+}
+
 .login-form form input.boton1 {
   text-transform: uppercase;
   border: none;
-  width: 175px !important;
+  width: 160px !important;
   font-size: 16px !important;
   line-height: 20px;
   padding: 15px !important;
@@ -619,10 +645,15 @@ header & menu
 }
 
 .menu ul li a.salir-icono::before {
-  font-size: 1.5em;
   position: relative;
-  content: "poner iconito";
-  left: -25%;
+  display: block;
+  width: 38px;
+  overflow: visible;
+  content: url(salir.svg);
+}
+
+.menu ul li a.salir-icono:hover span {
+  color: #fff;
 }
 
 .menu ul li{
@@ -640,7 +671,7 @@ header & menu
     .fa {
       display: block;
       font-size: 3.5em;
-      color: white;
+      color: $verde-claro;
       width: 4em;
       margin-bottom: -22px;
       bottom: -16px;
@@ -943,17 +974,6 @@ tools
 }
 .tools li .box-tool-large div.tool-text{
   text-align: center;
-}
-.tools li div.box-tool:before{
-  display: inline-block;
-  margin: 0;
-  content:image-url("ico.ropes-purple.png");
-  position:absolute;
-  top: -1.7em;
-  left: -1.7em;
-}
-.tools li div.box-tool-large:before{
-  @extend div.box-tool:before;
 }
 .box-tool-large .buttonbox{
   
@@ -2432,6 +2452,31 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
   width: 51%;
 }
 
+.rel-bot-right {
+  &::before {
+    position: absolute;
+    content: '';
+    bottom: -30px;
+    height: 30px;
+    width: 100%;
+    left: 15px;
+    transform: skewX(45deg);
+    background-color: $marron-unete;
+  }
+
+  &::after {
+    position: absolute;
+    content: '';  
+    right: -30px;
+    height: 100%;
+    width: 30px;
+    bottom: -16px;
+    transform: skewY(45deg);
+    background-color: $marron-unete;
+  }
+
+}
+
 .login-texto {
   color: #fff;
   padding: 10px;
@@ -2496,6 +2541,7 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
   max-width: 480px;
   padding: 30px;
   margin: 80px 0;
+  right: 10px;
 }
 
 .login-form h4 {
@@ -2600,6 +2646,15 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 }
 
 /* Fin nuevo usuario */
+
+/* Inicio */
+  .img-whatsapp {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+/* Inicio */
 
 /* MAIN LOGIN MIO */
 
