--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title><%= yield :title %> | Podemos</title>
-  <link rel="shortcut icon" href="<%= image_path("favicon.png") %>" type="image/png">
-  <link rel="icon" href="<%= image_path("favicon.png") %>" type="image/png">
+  <link rel="shortcut icon" href="<%= image_path("favicon-mm.ico") %>" type="image/png">
+  <link rel="icon" href="<%= image_path("favicon-mm.ico") %>" type="image/png">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1" name="viewport">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <%= csrf_meta_tags %>
