--- a/app/views/tools/_other_tools.html.erb
+++ b/app/views/tools/_other_tools.html.erb
@@ -34,14 +34,15 @@
       </div><!--.box-tool-->
     </li>
     <li class="box-tool-large">
-      <div class="box-tool-large">
-        <h3>Plaza Podemos</h3>
+      <div class="">
+        <h3>Síguenos en Whatsapp</h3>
         <div class="tool-text">
-            <p>El lugar oficial de encuentro y debate de Podemos: comparte materiales, opiniones, ideas, proyectos todo y mucho más.</p>
+            <%= image_tag "banner_whatsapp_conjunto.png", alt: "únete a whatsapp", class: "img-whatsapp" %>
+            
         </div><!--.tool-text-->
 
         <div class="buttonbox">
-            <%= link_to "Ir a Plaza Podemos", "https://plaza.podemos.info", class: "button", target: "_blank" %>
+            <%= link_to "Solicitar suscribirme a la lista", "https://web.whatsapp.com/send?phone=34653710704&text=Hola%21%20Me%20gustar%C3%ADa%20estar%20atento%20de%20todas%20las%20novedades%20de%20M%C3%A1s%20Madrid%20y%20recibir%20mensajes%20con%20toda%20la%20informaci%C3%B3n%20de%20la%20iniciativa%20de%20Manuela%20Carmena%20e%20%C3%8D%C3%B1igo%20Errej%C3%B3n.%0D%0A%20%0D%0ARecuerda%20guardar%20este%20n%C3%BAmero%20de%20tel%C3%A9fono%20en%20tu%20tel%C3%A9fono%3A%20653710704%20Si%20no%20lo%20haces%2C%20no%20podremos%20enviarte%20mensajes%21", class: "button", target: "_blank" %>
         </div>
       </div><!--.box-tool-->
     </li>
