--- a/app/views/tools/_other_tools.html.erb
+++ b/app/views/tools/_other_tools.html.erb
@@ -21,10 +21,20 @@
     <%end%>
     <li class="box-tool-large">
       <div class="box-tool-large">
+        <h3>Síguenos en Whatsapp</h3>
+        <div class="tool-text">
+
+        </div><!--.tool-text-->
+        <div class="buttonbox">
+            <%= link_to image_tag("banner_whatsapp_conjunto.png", alt: "únete a whatsapp", class: "img-whatsapp") , "https://web.whatsapp.com/send?phone=34653710704&text=Hola%21%20Me%20gustar%C3%ADa%20estar%20atento%20de%20todas%20las%20novedades%20de%20M%C3%A1s%20Madrid%20y%20recibir%20mensajes%20con%20toda%20la%20informaci%C3%B3n%20de%20la%20iniciativa%20de%20Manuela%20Carmena%20e%20%C3%8D%C3%B1igo%20Errej%C3%B3n.%0D%0A%20%0D%0ARecuerda%20guardar%20este%20n%C3%BAmero%20de%20tel%C3%A9fono%20en%20tu%20tel%C3%A9fono%3A%20653710704%20Si%20no%20lo%20haces%2C%20no%20podremos%20enviarte%20mensajes%21", target: "_blank" %>
+        </div>
+      </div><!--.box-tool-->
+    </li>
+    <li class="box-tool-large">
+      <div class="box-tool-large">
         <h3>CENSO DE MILITANTES</h3>
         <div class="tool-text" style="padding-bottom: 1em;">
-            <p>Si además de ser simpatizante militas en algún espacio de Podemos, regístrate aquí.
-            <br/> Para más información dirígete a la Secretaría de Organización de tu comunidad autónoma.</p>
+            
 
         </div><!--.tool-text-->
 
@@ -33,42 +43,5 @@
         </div>
       </div><!--.box-tool-->
     </li>
-    <li class="box-tool-large">
-      <div class="">
-        <h3>Síguenos en Whatsapp</h3>
-        <div class="tool-text">
-            <%= image_tag "banner_whatsapp_conjunto.png", alt: "únete a whatsapp", class: "img-whatsapp" %>
-            
-        </div><!--.tool-text-->
-
-        <div class="buttonbox">
-            <%= link_to "Solicitar suscribirme a la lista", "https://web.whatsapp.com/send?phone=34653710704&text=Hola%21%20Me%20gustar%C3%ADa%20estar%20atento%20de%20todas%20las%20novedades%20de%20M%C3%A1s%20Madrid%20y%20recibir%20mensajes%20con%20toda%20la%20informaci%C3%B3n%20de%20la%20iniciativa%20de%20Manuela%20Carmena%20e%20%C3%8D%C3%B1igo%20Errej%C3%B3n.%0D%0A%20%0D%0ARecuerda%20guardar%20este%20n%C3%BAmero%20de%20tel%C3%A9fono%20en%20tu%20tel%C3%A9fono%3A%20653710704%20Si%20no%20lo%20haces%2C%20no%20podremos%20enviarte%20mensajes%21", class: "button", target: "_blank" %>
-        </div>
-      </div><!--.box-tool-->
-    </li>
-    <!--li class="box-tool">
-      <div class="box-tool">
-        <h3>AppGree</h3>        
-        <div class="tool-text">
-            <p>La aplicación para opinar y proponer en tiempo real.</p>
-        </div>< !--.tool-text-->
-        
-        <!--div class="buttonbox">
-            <%= link_to "Descargar APP", "http://www.appgree.com/descarga-appgree/", class: "button", target: "_blank" %>
-        </div>< !--.buttonbox-->
-      <!--/div>< !--.box-tool-->
-    <!--/li -->
-    <!--li class="box-tool">
-      < !--div class="box-tool">
-        < !--h3>Equipos de Acción Participativa</h3>
-        < !--div class="tool-text">
-            < !--p>Nuestra intención es crear cientos de estos equipos, con el objetivo de dinamizar la participación y reforzar la movilización en los municipios.</p>
-        < !--/div>< !--.tool-text-->
-        <!--div class="buttonbox">
-            < !--%= link_to "Leer más", participation_teams_path, class: "button" %>
-            < !--%= render partial: "participation_teams/wants_participation_buttons" %>
-        </div>< !--.buttonbox-->
-      <!--/div>< !--.box-tool-->
-    <!--/li -->
   </ul>
 </section><!--.tools-->
