--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -505,6 +505,16 @@ home
   margin-bottom: 0px;
 }
 /* Fin nuevo usuario */
+
+
+/* Inicio */
+.img-whatsapp {
+  display: block;
+  width: 98%;
+  margin: 0 auto;
+}
+
+/* Inicio */
 /* MAIN LOGIN MIO */
 
 /*  FOOTER MIO */
@@ -676,6 +686,7 @@ header & menu
       margin-bottom: -22px;
       bottom: -16px;
       position: absolute;
+      right: -30px;
     }
     span {
       margin: 0 auto;
@@ -970,7 +981,7 @@ tools
   position:relative;
 }
 .tools li div.tool-text{
-  padding-top:7em;
+  padding-top:30px;
 }
 .tools li .box-tool-large div.tool-text{
   text-align: center;
@@ -979,12 +990,14 @@ tools
   
 }
 .tools li h3{
-  position: absolute;
+  position: relative;
   width: 60%;
-  top: 0;
-  right: 0;
   border-bottom:0;
   line-height:1em;
+  margin: 0 auto;
+  padding: 10px 0;
+  text-align: center;
+
 }
 .tools li .button{
   display:block;
@@ -1826,7 +1839,7 @@ elementos
   width:75%;
 }
 .tools li .box-tool-large div.tool-text{
-  padding-top:7em;
+  padding-top: 10px;
 }
 
 /*
@@ -2007,7 +2020,7 @@ layout 2: 460-600 (intermedia 1) # # # # # # # # # # # # # # # # # # # # # # # #
     width:80%;
   }
   .tools li .box-tool-large div.tool-text{
-    padding-top:7em;
+    padding-top: 20px;
   }
   .generic-wrapper {
     .container {
@@ -2137,11 +2150,11 @@ layout 3: 600-768 (intermedia 2) # # # # # # # # # # # # # # # # # # # # # # # #
     padding:1em 4%;
   }
   .menu ul li{
-    display:block;
+    display:none;
     font-size: 8px;
   }
   .menu ul li.menu-hamb{
-    display:none;
+    display:block;
   }
   .steps3 li:nth-child(1) span.block span.tab-number{
     width:12%;
@@ -2161,7 +2174,7 @@ layout 3: 600-768 (intermedia 2) # # # # # # # # # # # # # # # # # # # # # # # #
     margin: 0 auto;
   }
   .tools li .box-tool-large div.tool-text{
-    padding-top:7em;
+    padding-top: 10px;
   }
   .generic-wrapper {
     .container {
@@ -2275,10 +2288,10 @@ layout 4: 769-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
     padding:1em 0;
   }
   .menu ul li{
-    display:block;
+    display:none;
   }
   .menu ul li.menu-hamb{
-    display:none;
+    display:block;
   }
   .steps3 li span.block{
     height:4.2em;
@@ -2301,10 +2314,10 @@ layout 4: 769-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
     margin-right:2%;
   }
   .tools li div.tool-text{
-    height:12em;
+    height: auto;
   }
   .tools li .box-tool-large div.tool-text {
-    height:3em;
+    height: auto;
   }
   .tools li h3{
     width:60%;
@@ -2314,7 +2327,7 @@ layout 4: 769-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
     margin: 0 auto;
   }
   .tools li .box-tool-large div.tool-text{
-    padding-top:3em;
+    padding-top: 10px;
   }
   .tools li.box-tool {
     min-height: 320px;
@@ -2742,17 +2755,19 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
     margin-right:2%;
   }
   .tools li div.tool-text{
-    height:12em;
+    height: auto;
   }
   .tools li h3{
-    width:60%;
+    width: 90%;
+    text-align:center;
+    margin: 0 auto;
   }
   .tools li .box-tool-large .button{
     width: 273px;
     margin: 0 auto;
   }
   .tools li .box-tool-large div.tool-text{
-    padding-top:3em;
+    padding-top: 20px;
   }
 
   /*
