Cambios visuales para subir primera versión a la web

--- a/app/assets/stylesheets/adjustments.css.scss
+++ b/app/assets/stylesheets/adjustments.css.scss
@@ -15,10 +15,10 @@
   font-family: "Helvetica Neue",Helvetica,Arial,sans-sefif;
   font-size: 1.6em;
   font-weight: normal;
-  height: 20px;
+  height: auto;
   line-height: 20px;
   min-width: 16px;
-  padding: 0.85em 1.5%;
+  padding: 0.8em 1.5%;
   text-align: center;
   width: auto;
   float: left;
