--- a/app/views/application/_sidr_menu.html.erb
+++ b/app/views/application/_sidr_menu.html.erb
@@ -7,19 +7,13 @@
     <%= link_to "Datos personales", edit_user_registration_path %>
   </li>
   <li>
-    <%= link_to "Financiación", funding_path %>
+    <%= link_to "Crowdfunding", funding_path %>
   </li>
   <li>
-    <%= link_to "Iniciativas ciudadanas", proposals_path %>
+    <%= link_to "Iniciativas", proposals_path %>
   </li>
   <li>
-    <%= link_to "Brújula", blog_path %>
-  </li>
-  <li>
-    <%= link_to "IMPULSA", impulsa_path %>
-  </li>
-  <li>
-    <%= link_to "Equipos de Participación", "https://equipos.podemos.info" %>
+    <%= link_to "Tienda", "https://www.masmadrid.org/temas" %>
   </li>
   <li>
     <%= link_to "Salir", destroy_user_session_path, method: :delete %>
