--- a/app/assets/stylesheets/variables-mm.css.scss
+++ b/app/assets/stylesheets/variables-mm.css.scss
@@ -6,5 +6,7 @@ $verde-claro:#54efa5;
 $verde-medio: #3cae6c;
 $ocre-login: #efaf62;
 $marron-unete: #a93e37 ;
+$borde-unete: #ec849e;
 $background-error: #ffd5d4;
+/*#004732*/
 $morado-legend: #46466e;
