--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -2,7 +2,7 @@
 <section class="generic-wrapper">
 
     <div class="how-info">
-        <%= link_to '¿Qué son y cómo funcionan las Iniciativas Ciudadanas Podemos?', proposals_info_path %>
+        <%= link_to '¿Qué son y cómo funcionan las iniciativas de Más Madrid?', proposals_info_path %>
     </div>
     <h1>Iniciativas Ciudadanas</h1>
 
@@ -26,9 +26,8 @@
     </div>
 
     <div class="sidebar">
+
     
-
-
         <h2>Candentes</h2>
         <% @hot.each do |proposal| %>
             <article class="proposal-sidebar">    
@@ -38,7 +37,7 @@
                         <strong>
                             <%= formatted_support_percentage(proposal, precision: 1) %>
                         </strong><span> de avales</span>
-                    </p>
+                    </p> 
                     <h3><%= proposal.title %></h3>
                     <%= link_to("Ver iniciativa", proposal_path(proposal), :class => "show" ) %>
                 </div>
