--- a/app/views/tools/_other_tools.html.erb
+++ b/app/views/tools/_other_tools.html.erb
@@ -22,26 +22,26 @@
     <li class="box-tool-large">
       <div class="box-tool-large">
         <h3>Síguenos en Whatsapp</h3>
-        <div class="tool-text">
+        <!--<div class="tool-text">
 
         </div><!--.tool-text-->
-        <div class="buttonbox">
-            <%= link_to image_tag("banner_whatsapp_conjunto.png", alt: "únete a whatsapp", class: "img-whatsapp") , "https://web.whatsapp.com/send?phone=34653710704&text=Hola%21%20Me%20gustar%C3%ADa%20estar%20atento%20de%20todas%20las%20novedades%20de%20M%C3%A1s%20Madrid%20y%20recibir%20mensajes%20con%20toda%20la%20informaci%C3%B3n%20de%20la%20iniciativa%20de%20Manuela%20Carmena%20e%20%C3%8D%C3%B1igo%20Errej%C3%B3n.%0D%0A%20%0D%0ARecuerda%20guardar%20este%20n%C3%BAmero%20de%20tel%C3%A9fono%20en%20tu%20tel%C3%A9fono%3A%20653710704%20Si%20no%20lo%20haces%2C%20no%20podremos%20enviarte%20mensajes%21", target: "_blank" %>
+        <div class="buttonbox img-box">
+            <%= link_to image_tag("banner_whatsapp_conjunto.jpg", alt: "únete a whatsapp", class: "img-whatsapp") , "https://web.whatsapp.com/send?phone=34653710704&text=Hola%21%20Me%20gustar%C3%ADa%20estar%20atento%20de%20todas%20las%20novedades%20de%20M%C3%A1s%20Madrid%20y%20recibir%20mensajes%20con%20toda%20la%20informaci%C3%B3n%20de%20la%20iniciativa%20de%20Manuela%20Carmena%20e%20%C3%8D%C3%B1igo%20Errej%C3%B3n.%0D%0A%20%0D%0ARecuerda%20guardar%20este%20n%C3%BAmero%20de%20tel%C3%A9fono%20en%20tu%20tel%C3%A9fono%3A%20653710704%20Si%20no%20lo%20haces%2C%20no%20podremos%20enviarte%20mensajes%21", target: "_blank", class: "img-box" %>
         </div>
       </div><!--.box-tool-->
     </li>
     <li class="box-tool-large">
       <div class="box-tool-large">
-        <h3>CENSO DE MILITANTES</h3>
-        <div class="tool-text" style="padding-bottom: 1em;">
-            
+        <h3>CROWDFUNDING</h3>
+        <!--<div class="tool-text" style="padding-bottom: 1em;">
 
         </div><!--.tool-text-->
 
-        <div class="buttonbox">
-            <%= link_to "Regístrate aquí", "/registro-censo-militantes", class: "button" %>
+        <div class="buttonbox  btn-rel">
+            <%= link_to "Haz tu donativo", "https://www.masmadrid.org/donaciones", class: "button boton-ocre-verde" %>
         </div>
       </div><!--.box-tool-->
     </li>
+    
   </ul>
 </section><!--.tools-->
