--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -10,15 +10,14 @@
       <div class="sobre-nosotros-footer">
           <h3>Colabora</h3>
           <ul>
-              <li><a href="#">Crowdfunding</a></li>
-              <li><a href="#">Hazte voluntario</a></li>
+              <li><a href="https://www.masmadrid.org/donaciones">Crowdfunding</a></li>
+              <li><a href="https://www.masmadrid.org/voluntarios">Hazte voluntario</a></li>
           </ul>
       </div>
       <div class="sobre-nosotros-footer">
           <h3>Conócenos</h3>
           <ul>
               <li><a href="https://www.masmadrid.org/">Más Madrid</a></li>
-              <li><a href="https://www.masmadrid.org/carta_de_manuela_carmena_e_igo_errej_n">Carta</a></li>
               <li><a href="https://www.masmadrid.org/novedades">Novedades</a></li>
           </ul>
       </div>
