--- a/app/views/microcredit/info.html.erb
+++ b/app/views/microcredit/info.html.erb
@@ -14,7 +14,7 @@
         <li><strong>Transparencia:</strong> En Más Madrid practicamos la transparencia que queremos ver en las instituciones. En nuestros estatutos nos comprometimos a publicar nuestras cuentas en la web.</li>
       </ul>
 
-      <p><%= image_tag "logo.podemos-425-p.jpg", alt: "Podemos.", width: "30%" %></p>
+      <p><%= image_tag "logo-masmadrid.svg", alt: "Más Madrid.", width: "30%" %></p>
 
       <div class="buttonbox">
         <%= link_to "Colaborar", microcredit_path, class: 'button' %>
