--- a/app/views/page/faq.html.erb
+++ b/app/views/page/faq.html.erb
@@ -15,7 +15,7 @@
     <ul id="general" class="cd-faq-group">
       <li class="cd-faq-title"><h2>General</h2></li>
       <li>
-      <a class="cd-faq-trigger" href="#0">1. ¿Qué necesitas para entrar en participa.podemos.info?</a>
+      <a class="cd-faq-trigger" href="#0">1. ¿Qué necesitas para entrar en participa.masmadrid.info?</a>
       <div class="cd-faq-content">
         <p>Para entrar (y por lo tanto poder votar) necesitas lo siguiente:</p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;1. <strong>DNI/NIF/Pasaporte</strong>. Por seguridad, debe ser único y no se podrá cambiar. </p>
@@ -25,9 +25,9 @@
       </li>
 	    
       <li>
-      <a class="cd-faq-trigger" href="#0">2. ¿Para qué sirve participa.podemos.info?</a>
+      <a class="cd-faq-trigger" href="#0">2. ¿Para qué sirve participa.masmadrid.info?</a>
       <div class="cd-faq-content">
-        <p>Por ahora <a href="https://participa.podemos.info" target="_blank" title="Podemos Participa">participa.podemos.info</a> tiene las siguientes funcionalidades: </p>
+        <p>Por ahora <a href="https://participa.masmadrid.info" target="_blank" title="masmadrid Participa">participa.masmadrid.info</a> tiene las siguientes funcionalidades: </p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&bull; <strong>Pasarela segura de voto</strong>. Este es el lugar donde tendrás que entrar siempre que haya una votación abierta.</p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&bull; <strong>Gestión de datos personales</strong>. Podrás modificar tus datos personales para que siempre estén actualizados. Iremos implementando más funcionalidades como las colaboraciones económicas, el banco de talentos y los distinstos mecanismos de participación que especifica el documento organizativo.</p>
       </div> <!-- cd-faq-content -->
@@ -75,7 +75,7 @@
       <li>
       <a class="cd-faq-trigger" href="#0">8. Sigo sin poder acceder al portal de participación. ¿Cómo puedo comunicarme con el equipo de soporte?</a>
       <div class="cd-faq-content">
-        <p>A traves de <a href="/soporte-votaciones/">https://participa.podemos.info/soporte-votaciones</a>.
+        <p>A traves de <a href="/soporte-votaciones/">https://participa.masmadrid.info/soporte-votaciones</a>.
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -103,7 +103,7 @@
       <div class="cd-faq-content">
         <p><%= image_tag "faq-error-login.png" %></p>
         <p>Si no recuerdas el correo electrónico que utilizaste para inscribirte, prueba con tu DNI y código de verificación.</p>
-        <p>Si no recuerdas la contraseña, haz click <a href="https://participa.podemos.info/es/users/password/new" target="_blank" title="¿Has olvidado tu contraseña?">aquí</a> para solicitar una nueva.</p>
+        <p>Si no recuerdas la contraseña, haz click <a href="https://participa.masmadrid.info/es/users/password/new" target="_blank" title="¿Has olvidado tu contraseña?">aquí</a> para solicitar una nueva.</p>
         <p>Si no recibes tu contraseña, mira el error 2 que aparece más abajo.</p>
       </div> <!-- cd-faq-content -->
       </li>
@@ -113,7 +113,7 @@
       <div class="cd-faq-content">
         <p><strong>Causa:</strong><br />Tu DNI ya está en nuestro inscrito. Tal y como dice el error, prueba a iniciar sesión o a pedir que te recordemos la contraseña. Recuerda que el DNI debe ser único. </p>
 
-        <p><strong>Solución:</strong><br />Esto significa que ya te inscribiste anteriormente a través de juntos.podemos.info. Por lo tanto debes hacer click aquí para solicitar una nueva contraseña de acceso.</p>
+        <p><strong>Solución:</strong><br />Esto significa que ya te inscribiste anteriormente a través de juntos.masmadrid.info. Por lo tanto debes hacer click aquí para solicitar una nueva contraseña de acceso.</p>
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -130,7 +130,7 @@
       <a class="cd-faq-trigger" href="#0">Error 3: <i>No me llega ningún correo a ninguna de mis cuentas. Creo que me equivoqué de email. </i></a>
       <div class="cd-faq-content">
         <p><strong>Causa:</strong><br />Quizás escribiste mal el correo en el proceso de registro o el registro fue incompleto.</p>
-        <p><strong>Solución:</strong><br />Contacta con nosotros en <a href="https://participa.podemos.info/soporte-votaciones/">soporte votaciones</a>.</p>
+        <p><strong>Solución:</strong><br />Contacta con nosotros en <a href="https://participa.masmadrid.info/soporte-votaciones/">soporte votaciones</a>.</p>
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -141,7 +141,7 @@
 
         <p>Comprueba que introduces tu teléfono móvil en formato internacional válido (+34 677XXXXXX). El prefijo internacional que tendrás es el correspondiente al país que has marcado en el formulario inicial.</p>
 
-        <p>Si tras intentarlo de nuevo sigues teniendo problemas al recibir el SMS, contacta con nosotros en <a href="https://participa.podemos.info/soporte-votaciones/">soporte votaciones</a>.</p>
+        <p>Si tras intentarlo de nuevo sigues teniendo problemas al recibir el SMS, contacta con nosotros en <a href="https://participa.masmadrid.info/soporte-votaciones/">soporte votaciones</a>.</p>
 
 
         <p><strong>Info<br />
@@ -163,8 +163,8 @@
       <a class="cd-faq-trigger" href="#0">1. ¿Cómo puedo votar?</a>
       <div class="cd-faq-content">
         <p>En tres sencillos pasos:</p>
-        <p>1. <strong>Descarga la aplicación de Podemos:</strong> en el siguiente enlace <a href="https://play.google.com/store/apps/details?id=info.podemos.participa" target="_blank" title="Aplicación de Podemos">Aplicación Podemos</a> o accede al <a href="https://participa.podemos.info" target="_blank" title="participa.podemos.info">Portal de Participación</a>, e introduce tu DNI/Correo electrónico y tu contraseña.</p>
-        <p>2. <strong>Accede a la cabina de votación:</strong> Una vez hayas entrado en la aplicación de Podemos, te aparecerá un botón de votar, pincha y serás redirigido a la cabina de votación.</p>
+        <p>1. <strong>Descarga la aplicación de Más Madrid:</strong> en el siguiente enlace <a href="https://play.google.com/store/apps/details?id=info.masmadrid.participa" target="_blank" title="Aplicación de Más Madrid">Aplicación Más Madrid</a> o accede al <a href="https://participa.masmadrid.info" target="_blank" title="participa.masmadrid.info">Portal de Participación</a>, e introduce tu DNI/Correo electrónico y tu contraseña.</p>
+        <p>2. <strong>Accede a la cabina de votación:</strong> Una vez hayas entrado en la aplicación de Más Madrid, te aparecerá un botón de votar, pincha y serás redirigido a la cabina de votación.</p>
         <p><%= image_tag "faq-votaciones-votacion-en-curso.png" %></p>
         <p>3. <strong>Vota:</strong> Responde a las preguntas de la votación. Antes de emitir tu voto, podrás confirmar la respuestas que has elegido y tendrás oportunidad de modificarlas. Una vez hayas hecho esto, podrás confirmar y emitir tu voto.</p>
       </div> <!-- cd-faq-content -->
@@ -173,15 +173,15 @@
       <li>
       <a class="cd-faq-trigger" href="#0">2. ¿Quién puede votar en éste proceso?</a>
       <div class="cd-faq-content">
-        <p>Cualquier persona inscrita en Podemos ( con anterioridad al 5 de enero de 2017 ), a través de <a href="http://participa.podemos.info" target="_blank">participa.podemos.info</a> .</p>
+        <p>Cualquier persona inscrita en Más Madrid ( con anterioridad al 5 de enero de 2017 ), a través de <a href="http://participa.masmadrid.info" target="_blank">participa.masmadrid.info</a> .</p>
       </div> <!-- cd-faq-content -->
       </li>
 
       <li>
       <a class="cd-faq-trigger" href="#0">3. ¿Qué necesito para votar?</a>
       <div class="cd-faq-content">
-        <p>Necesitas un ordenador o cualquier otro dispositivo (android/iphone) con acceso a internet para acceder a <a href="https://participa.podemos.info" target="_blank">participa.podemos.info</a> 
-          y estar inscrito/a en <a href="https://participa.podemos.info/es/users/sign_up" title="participa.podemos.info " target="_blank">participa.podemos.info</a> y disponer de tu teléfono móvil para recibir el SMS para votar.</p>
+        <p>Necesitas un ordenador o cualquier otro dispositivo (android/iphone) con acceso a internet para acceder a <a href="https://participa.masmadrid.info" target="_blank">participa.masmadrid.info</a> 
+          y estar inscrito/a en <a href="https://participa.masmadrid.info/es/users/sign_up" title="participa.masmadrid.info " target="_blank">participa.masmadrid.info</a> y disponer de tu teléfono móvil para recibir el SMS para votar.</p>
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -195,7 +195,7 @@
       <li>
       <a class="cd-faq-trigger" href="#0">5. ¿Dónde puedo consultar las candidaturas?</a>
       <div class="cd-faq-content">
-        <p>Aquí: <a href="https://vistalegre2.podemos.info/candidaturas/" target="_blank">vistalegre2.podemos.info/candidaturas/</a></p>
+        <p>Aquí: <a href="https://vistalegre2.masmadrid.info/candidaturas/" target="_blank">vistalegre2.masmadrid.info/candidaturas/</a></p>
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -203,21 +203,21 @@
       <li>
       <a class="cd-faq-trigger" href="#0">6. No tengo un dispositivo móvil (smartphone/tablet), ¿puedo votar?</a>
       <div class="cd-faq-content">
-        <p>Si, puedes votar también desde un ordenador con acceso a internet en <a href="https://participa.podemos.info" target="_blank">participa.podemos.info</a> </p>
+        <p>Si, puedes votar también desde un ordenador con acceso a internet en <a href="https://participa.masmadrid.info" target="_blank">participa.masmadrid.info</a> </p>
       </div> <!-- cd-faq-content -->
       </li>
 
       <li>
       <a class="cd-faq-trigger" href="#0">7. ¿Qué metodos de autenticación se han habilitado?</a>
       <div class="cd-faq-content">
-        <p>Creemos que la verificación por teléfono móvil ofrece altas garantías de seguridad y a la vez hace sencilla la participación. No obstante, el equipo informático de Podemos está trabajando en nuevas formas de validación que sigan apostando por un equilibrio que permita niveles de participación altos con la mayor seguridad y transparencia.</p>
+        <p>Creemos que la verificación por teléfono móvil ofrece altas garantías de seguridad y a la vez hace sencilla la participación. No obstante, el equipo informático de Más Madrid está trabajando en nuevas formas de validación que sigan apostando por un equilibrio que permita niveles de participación altos con la mayor seguridad y transparencia.</p>
       </div> <!-- cd-faq-content -->
       </li>
 
       <li>
       <a class="cd-faq-trigger" href="#0">8. ¿Qué se decide en la votación?</a>
       <div class="cd-faq-content">
-        <p>Te recomendamos que accedas a la web del proceso, apartado de preguntas frecuentes: <a href="https://vistalegre2.podemos.info/soporte/">vistalegre2.podemos.info/soporte/</a></p>
+        <p>Te recomendamos que accedas a la web del proceso, apartado de preguntas frecuentes: <a href="https://vistalegre2.masmadrid.info/soporte/">vistalegre2.masmadrid.info/soporte/</a></p>
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -225,7 +225,7 @@
       <li>
       <a class="cd-faq-trigger" href="#0">9. ¿Cuándo se publicarán los resultados?</a>
       <div class="cd-faq-content">
-        <p>Te recomendamos que accedas a la web del proceso, apartado de preguntas frecuentes: <a href="https://vistalegre2.podemos.info/soporte/">vistalegre2.podemos.info/soporte/</a></p>
+        <p>Te recomendamos que accedas a la web del proceso, apartado de preguntas frecuentes: <a href="https://vistalegre2.masmadrid.info/soporte/">vistalegre2.masmadrid.info/soporte/</a></p>
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -254,14 +254,14 @@
       <li>
       <a class="cd-faq-trigger" href="#0">13. ¿En qué otras votaciones se ha utilizado Agora Voting?</a>
       <div class="cd-faq-content">
-        <p>Entre otras, Agora Voting se ha utlizado para llevar a cabo las <a target="_blank" href="”http://www.eldiario.es/politica/primarias-Podemos-europeas-superan-votos_0_245675520.html”">primarias europeas de Podemos</a>, la iniciativa de <a target="_blank" href="http://www.theguardian.com/world/2013/sep/11/joan-baldovi-spain-transparency-bill">Congreso Transparente</a> en dos votaciones, así como para las <a target="_blank" href="http://www.europapress.es/portaltic/internet/noticia-confederacion-pirata-organiza-primarias-elecciones-europeas-traves-internet-20140210164929.html">primarias</a> de la <a target="_blank" href="http://confederacionpirata.org/">Confederación Pirata</a>.</p>
+        <p>Entre otras, Agora Voting se ha utlizado para llevar a cabo las <a target="_blank" href="”http://www.eldiario.es/politica/primarias-mas-madrid-europeas-superan-votos_0_245675520.html”">primarias europeas de Más Madrid</a>, la iniciativa de <a target="_blank" href="http://www.theguardian.com/world/2013/sep/11/joan-baldovi-spain-transparency-bill">Congreso Transparente</a> en dos votaciones, así como para las <a target="_blank" href="http://www.europapress.es/portaltic/internet/noticia-confederacion-pirata-organiza-primarias-elecciones-europeas-traves-internet-20140210164929.html">primarias</a> de la <a target="_blank" href="http://confederacionpirata.org/">Confederación Pirata</a>.</p>
       </div> <!-- cd-faq-content -->
       </li>
 
       <li>
       <a class="cd-faq-trigger" href="#0">14. ¿Cómo puedo comprobar que mi voto ha quedado registrado correctamente?</a>
       <div class="cd-faq-content">
-        <p>A traves del localizador del voto que el sistema muestra tras votar en la cabina de votación, que debes anotar. Una vez emitido el voto podrá comprobar si ha sido emitido con el siguiente comprobador. <a target="_blank" href="https://participa.podemos.info/es/vote/check/5">Haga click aquí</a> para acceder al comprobador. Esta comprobación no solo sirve para verificar que tu voto ha sido registrado, sino que también verifica que ha sido contabilizado en el recuento (ver dos preguntas más abajo).</p>
+        <p>A traves del localizador del voto que el sistema muestra tras votar en la cabina de votación, que debes anotar. Una vez emitido el voto podrá comprobar si ha sido emitido con el siguiente comprobador. <a target="_blank" href="https://participa.masmadrid.info/es/vote/check/5">Haga click aquí</a> para acceder al comprobador. Esta comprobación no solo sirve para verificar que tu voto ha sido registrado, sino que también verifica que ha sido contabilizado en el recuento (ver dos preguntas más abajo).</p>
       </div> <!-- cd-faq-content -->
       </li>
 
@@ -303,14 +303,14 @@
       <li>
       <a class="cd-faq-trigger" href="#0">20. ¿Cómo se asegura que cada votante vota una sóla vez, y que sólo votan las personas con derecho a ello?</a>
       <div class="cd-faq-content">
-        <p>Gracias al sistema de autenticación en el portal de participación de Podemos se asegura que sólo aquellas personas que figuren en el censo de Podemos pueden votar. Se controla que se efectúe sólo un voto asociado a cada persona en dicho censo.</p>
+        <p>Gracias al sistema de autenticación en el portal de participación de Más Madrid se asegura que sólo aquellas personas que figuren en el censo de Más Madrid pueden votar. Se controla que se efectúe sólo un voto asociado a cada persona en dicho censo.</p>
       </div> <!-- cd-faq-content -->
       </li>
 
       <li>
       <a class="cd-faq-trigger" href="#0">21. Tengo más preguntas</a>
       <div class="cd-faq-content">
-        <p>En ese caso, puedes <a href="https://participa.podemos.info/soporte-votaciones/">contactar con nosotros</a> e intentaremos resolver tus dudas, preguntas, o comentarios.</p>
+        <p>En ese caso, puedes <a href="https://participa.masmadrid.info/soporte-votaciones/">contactar con nosotros</a> e intentaremos resolver tus dudas, preguntas, o comentarios.</p>
       </div> <!-- cd-faq-content -->
       </li>
     </ul> <!-- cd-faq-group -->
