--- a/app/views/participation_teams/_wants_participation_buttons.html.erb
+++ b/app/views/participation_teams/_wants_participation_buttons.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "¡Únete!", "https://equipos.podemos.info/auth/participa", class: "button" %>
+<%= link_to "¡Únete!", "https://equipos.masmadrid.info/auth/participa", class: "button" %>
