--- a/app/views/user_verifications/_multimedia.html.erb
+++ b/app/views/user_verifications/_multimedia.html.erb
@@ -6,8 +6,8 @@
   </div>
   <div class="col-bhome-6a12 text-center">
     <!-- a class="button" style="margin: 8% 4%;" href="https://files.podemos.info/esh2fTOXkK.pdf" target="_blank" rel="noopener noreferrer" title="Descargar Guía Identifícate con Podemos"><center><strong>Guía</strong><br />Identifícate con Podemos</center></a -->
-    <a class="button" style="margin: 8% 4%;" href="https://files.podemos.info/y9fHFqGlTC.pdf" target="_blank" rel="noopener noreferrer" title="Descargar Guía Identifícate con Podemos"><center><strong>Guía</strong><br />Identifícate con Podemos</center></a>
+    <a class="button" style="margin: 8% 4%;" href="https://files.podemos.info/y9fHFqGlTC.pdf" target="_blank" rel="noopener noreferrer" title="Descargar Guía Identifícate con Podemos"><center><strong>Guía</strong><br />Identifícate con Más Madrid</center></a>
   </div>
 </div>
 <br /><br /><br />
-<h3 style="font-size:2em ;">PASO 2: ¡Identifícate con Podemos!</h3>
+<h3 style="font-size:2em ;">PASO 2: ¡Identifícate con Más Madrid!</h3>
