--- a/app/views/impulsa/project.html.erb
+++ b/app/views/impulsa/project.html.erb
@@ -18,7 +18,7 @@
               <% if @project.persisted? %>
                 <p>Ya tienes creado un proyecto para la edición actual del Programa IMPULSA. <% if @project.wizard_has_errors? %>Debes completar todos los datos del proyecto para que podamos revisarlo. Una vez que lo hayas hecho debes volver a está página para marcar tu proyecto para revisión.<% else %>Para que podamos revisar que todos los datos enviados son correctos debes presionar el botón "marcar para revisión".<%end%></p>
               <% else %>
-                <p>Estás a punto de comenzar a inscribir un proyecto para la edición actual del Programa IMPULSA. Antes de comenzar te recomendamos que consultes las <a href="http://impulsa.podemos.info/#bases">bases de esta edición</a>. Lee atentamente el apartado de la documentación que hay que entregar.</p>
+                <p>Estás a punto de comenzar a inscribir un proyecto para la edición actual del Programa IMPULSA. Antes de comenzar te recomendamos que consultes las <a href="http://impulsa.masmadrid.info/#bases">bases de esta edición</a>. Lee atentamente el apartado de la documentación que hay que entregar.</p>
               <% end %>
              <p>Recuerda que la fecha límite para presentar tu proyecto es el <strong><%= l((@edition.new_projects_until-1.second).to_date, format: :long) %></strong>.</p>
             <% else %>
@@ -46,7 +46,7 @@
             <p>Lamentamos que hayas renunciado a realizar tu proyecto y te animamos a presentarlo en la próxima edición de IMPULSA.</p>
           <% when "winner" %>
         <% end %>
-        <p>Si tienes cualquier consulta, escribe a <a href='mailto:<%=@edition.email%>'><%=@edition.email%></a> y te responderemos en el menor tiempo posible. También puedes consultar las <a href="http://impulsa.podemos.info/#bases">bases de esta edición</a>.</p>
+        <p>Si tienes cualquier consulta, escribe a <a href='mailto:<%=@edition.email%>'><%=@edition.email%></a> y te responderemos en el menor tiempo posible. También puedes consultar las <a href="http://impulsa.masmadrid.info/#bases">bases de esta edición</a>.</p>
       
         <h3>Datos del proyecto</h3>
         <%= errors_in_form @project %>
@@ -78,7 +78,7 @@
                 <%= f.label :terms_of_service %>
                 <div class="input-box">
                   <%= f.check_box :terms_of_service, required: true, class: 'checkbox' %>
-                  <p class="text-xl"><%= t("podemos.impulsa.terms_of_service", link: "http://impulsa.podemos.info/#bases").html_safe %></p>
+                  <p class="text-xl"><%= t("podemos.impulsa.terms_of_service", link: "http://impulsa.masmadrid.info/#bases").html_safe %></p>
                 </div>
               </div>
               <div class="inputlabel-box">
