--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
-  <meta property="og:title" content="Podemos | Portal de participación" />
+  <meta property="og:title" content="Más Madrid | Portal de participación" />
   <meta property="og:image" content="<%=@meta_image%>" />
   <meta property="og:description" content="<%=@meta_description%>" />
-  <meta name="twitter:title" content="Podemos | Portal de participación" />
+  <meta name="twitter:title" content="Más Madrid | Portal de participación" />
   <meta name="twitter:description" content="<%=@meta_description%>" />
   <meta name="twitter:image" content="<%=@meta_image%>" />
   <%= render partial: 'tag_manager_head' %>
